fix(core): keep multi-key results in a stable order
ScorerOutput.Keyed finished with Map.copyOf, whose iteration order is salted
per JVM run, so the same code produced json_match:<key> results in a different
order each time — and evaluate(), which returns the first result, returned an
arbitrary key's score.